--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "7.4.4",
     "apollo-boost": "0.3.1",
+    "babel-loader": "8.0.6",
     "graphql": "14.3.0",
     "react": "^16.8.6",
     "react-apollo": "2.5.5",
