--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "0.3.1",
     "babel-loader": "8.0.5",
     "graphql": "14.3.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.8.6",
     "react-apollo": "2.5.5",
     "react-dom": "^16.8.6",
