--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.6",
     "react-apollo": "2.5.5",
     "react-dom": "^16.8.6",
+    "react-password-mask": "^3.3.1",
     "react-redux": "7.0.3",
     "react-scripts": "3.0.1",
     "redux": "4.0.1",
